@@ -16,6 +16,8 @@ x2goclient (4.0.4.1-0x2go1) UNRELEASED; urgency=low
       for show_RichText_Generic_MsgBox() with a critical icon.
     - onmainwindow.{cpp,h}: properly handle scdaemon errors with a message box
       and close the client.
+    - onmainwindow.cpp: manipulate PATH and append /usr/lib/gnupg2/ to it when
+      starting scdaemon. Fixes: #882.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 26 May 2015 21:42:09 +0200
 
